--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3307/bmsproject
 spring.datasource.username=root
 spring.datasource.password=root@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.webflux.cors.enabled=true
+spring.jpa.show-sql=true
